welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:13: error: expected class or object definition
def faireV(c:Color) ={
^MethodsPicture:34: error: Unmatched closing brace '}' ignored here
}
^